whitespace fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@ body {
 
 p {
     font-size: large;
+    white-space: pre-line;
 }
 
 .section {
